# langextract

./: pyproject.toml
